k8s/istiogateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: onetouch-gateway
  namespace: onetouch
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
