k8s/VS.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend
  namespace: onetouch
spec:
  hosts:
  - "*"
  gateways:
  - onetouch-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: backend
        port:
          number: 3000
